ready for production

--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -43,8 +43,8 @@ collaborators:
 
 domains:
   production:
-    - "performantapp.com"
-    - "www.performantapp.com"
+    - "piratestrong.com"
+    - "www.piratestrong.com"
 
 addons:
   all:
