--- a/config/providers.yml
+++ b/config/providers.yml
@@ -48,6 +48,6 @@ production:
     - name: google_oauth2
       key: "577815670015-lijjudtm33m390m5hfoa3bkfq07juv27.apps.googleusercontent.com"
       secret: "VXlos9pmiBWxMSrT3g-0j2Jn"
-      scope: "userinfo.email,userinfo.profile"
+      scope: "userinfo.email,userinfo.profile,https://spreadsheets.google.com/feeds,https://docs.google.com/feeds,https://docs.googleusercontent.com/"
       access_type: 'offline'
       approval_prompt: ''
