--- a/config/s3.yml
+++ b/config/s3.yml
@@ -9,7 +9,7 @@ test:
 production:
   access_key_id: AKIAJLZSJ7DLDBAIC3QA
   secret_access_key: "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"
-  bucket: com.gunnertech.performance-unlimited.development.production
+  bucket: com.gunnertech.performance-unlimited.production
 staging:
   access_key_id: AKIAJLZSJ7DLDBAIC3QA 
   secret_access_key: "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"
