--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,16 +1,18 @@
+common: &common
+  access_key_id: AKIAI67VTVS4637QSLEQA
+  secret_access_key: 8SJg5B+ZT5De8WRgbKcWmvmgMjc0NxWnoKv6+e/z
+  
 development:
-  access_key_id: ENV['S3_KEY']
-  secret_access_key: ENV['S3_SECRET']
+  <<: *common
   bucket: com.gunnertech.performance-unlimited.development
+  
 test:
-  access_key_id: ENV['S3_KEY']
-  secret_access_key: ENV['S3_SECRET']
+  <<: *common
   bucket: circlestreet-test
+  
 production:
-  access_key_id: ENV['S3_KEY']
-  secret_access_key: ENV['S3_SECRET']
+  <<: *common
   bucket: com.gunnertech.performance-unlimited.production
+  
 staging:
-  access_key_id: ENV['S3_KEY']
-  secret_access_key: ENV['S3_SECRET']
   bucket: com.gunnertech.performance-unlimited.staging
